--- a/src/main/webapp/resources/css/loginCss.css
+++ b/src/main/webapp/resources/css/loginCss.css
@@ -1,109 +1,96 @@
-/* 
-    Document   : loginCss
-    Created on : Aug 20, 2013, 4:20:11 PM
-    Author     : jimmy
-    Description:
-        Purpose of the stylesheet follows.
-*/
-body{
-    background-repeat: repeat-x;
-    background-image: url("../../images/headerHD.png");
-    background-color: #e7e6e6;
-    
-}
-
-.box{
-	margin-top:50px;
-	margin-left:120px;
-	background:url(../../images/shape.png) no-repeat center;
-	/*margin:30px auto 0 auto;*/
-	width:360px;
-	height:264px;
-	position:absolute;
-}
-
-.checkbox-remember{
-    display: block;
-    width: 40px;
-    height: 15px;
-    overflow: hidden;
-    border-radius: 5px;
-	float:left;
-	margin:5px 0 0 0;
-}
-
-.remember{
-	font-size:12px;
-	color:#999999;
-	margin:5px;
-	float:left;
-}
-
-.logo-img {
-  display: block;
-  height: 70px;
-  width: 176px;
-  
-  overflow: hidden;
-  background: url("../../images/ITCS-Logos-03.png") no-repeat;
-}
-
-.header{
-    
-    
-   
-    
-    
-    
-   
-}
-
-#footer{
-    background-color: #333;
-    height: 500px;
-    margin-bottom: auto 0px 0px 0px;
-}
-
-#parent {
-    padding: 0px;
-    margin:150px auto;
-    text-align: center;
-  }
-  .positionable {
-    position: absolute;
-    display: block;
-    right: 0;
-    bottom: 0;
-    background-color: #bcd5e6;
-    text-align: center;
-  }
-  #positionable1 {
-    width: 75px;
-    height: 75px;
-  }
-  #positionable2 {
-    width: 120px;
-    height: 40px;
-  }
-  select, input {
-    margin-left: 15px;
-  }
-  
-.logInGrid tr, .logInGrid td {
-    
-    border-color: #fff;
-    
-}
-
-#divHD{
-    padding: 20px 0px 0px 0%;
-    margin:0px auto auto;
-}
-
-#divItcs{
-    padding: 10px 0px 0px 0%;
-}
-
-
-
-
+ /* Sticky footer styles
+-------------------------------------------------- */
+            html {
+                position: relative;
+                min-height: 100%;
+            }
+            body {
+                /* Margin bottom by footer height */
+                margin-bottom: 30px;
+                padding-top: 40px;
+            }
+            #footer {
+                position: absolute;
+                bottom: 0;
+                width: 100%;
+                /* Set the fixed height of the footer here */
+                height: 30px;
+                background-color: #ffffff;
+            }
+            /* Login Form styles
+            -------------------------------------------------- */
+            .form-signin
+            {
+                max-width: 330px;
+                padding: 15px;
+                margin: 0 auto;
+            }
+            .form-signin .form-signin-heading, .form-signin .checkbox
+            {
+                margin-bottom: 10px;
+            }
+            .form-signin .checkbox
+            {
+                font-weight: normal;
+            }
+            .form-signin .form-control
+            {
+                position: relative;
+                font-size: 16px;
+                height: auto;
+                padding: 10px;
+                -webkit-box-sizing: border-box;
+                -moz-box-sizing: border-box;
+                box-sizing: border-box;
+            }
+            .form-signin .form-control:focus
+            {
+                z-index: 2;
+            }
+            .form-signin input[type="text"]
+            {
+                margin-bottom: -1px;
+                border-bottom-left-radius: 0;
+                border-bottom-right-radius: 0;
+            }
+            .form-signin input[type="password"]
+            {
+                margin-bottom: 10px;
+                border-top-left-radius: 0;
+                border-top-right-radius: 0;
+            }
+            .account-wall
+            {
+                margin-top: 20px;
+                padding: 40px 0px 20px 0px;
+                background-color: #f7f7f7;
+                -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+                -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+                box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+            }
+            .login-title
+            {
+                color: #555;
+                font-size: 18px;
+                font-weight: 400;
+                display: block;
+            }
+            .profile-img
+            {
+                width: 96px;
+                height: 96px;
+                margin: 0 auto 10px;
+                display: block;
+                -moz-border-radius: 50%;
+                -webkit-border-radius: 50%;
+                border-radius: 50%;
+            }
+            .need-help
+            {
+                margin-top: 10px;
+            }
+            .new-account
+            {
+                display: block;
+                margin-top: 10px;
+            }
