--- a/src/main/webapp/resources/css/loginCss.css
+++ b/src/main/webapp/resources/css/loginCss.css
@@ -1,96 +1,112 @@
- /* Sticky footer styles
+/* Sticky footer styles
 -------------------------------------------------- */
-            html {
-                position: relative;
-                min-height: 100%;
-            }
-            body {
-                /* Margin bottom by footer height */
-                margin-bottom: 30px;
-                padding-top: 40px;
-            }
-            #footer {
-                position: absolute;
-                bottom: 0;
-                width: 100%;
-                /* Set the fixed height of the footer here */
-                height: 30px;
-                background-color: #ffffff;
-            }
-            /* Login Form styles
-            -------------------------------------------------- */
-            .form-signin
-            {
-                max-width: 330px;
-                padding: 15px;
-                margin: 0 auto;
-            }
-            .form-signin .form-signin-heading, .form-signin .checkbox
-            {
-                margin-bottom: 10px;
-            }
-            .form-signin .checkbox
-            {
-                font-weight: normal;
-            }
-            .form-signin .form-control
-            {
-                position: relative;
-                font-size: 16px;
-                height: auto;
-                padding: 10px;
-                -webkit-box-sizing: border-box;
-                -moz-box-sizing: border-box;
-                box-sizing: border-box;
-            }
-            .form-signin .form-control:focus
-            {
-                z-index: 2;
-            }
-            .form-signin input[type="text"]
-            {
-                margin-bottom: -1px;
-                border-bottom-left-radius: 0;
-                border-bottom-right-radius: 0;
-            }
-            .form-signin input[type="password"]
-            {
-                margin-bottom: 10px;
-                border-top-left-radius: 0;
-                border-top-right-radius: 0;
-            }
-            .account-wall
-            {
-                margin-top: 20px;
-                padding: 40px 0px 20px 0px;
-                background-color: #f7f7f7;
-                -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-                -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-                box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-            }
-            .login-title
-            {
-                color: #555;
-                font-size: 18px;
-                font-weight: 400;
-                display: block;
-            }
-            .profile-img
-            {
-                width: 96px;
-                height: 96px;
-                margin: 0 auto 10px;
-                display: block;
-                -moz-border-radius: 50%;
-                -webkit-border-radius: 50%;
-                border-radius: 50%;
-            }
-            .need-help
-            {
-                margin-top: 10px;
-            }
-            .new-account
-            {
-                display: block;
-                margin-top: 10px;
-            }
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 30px;
+    padding-top: 40px;
+}
+
+body { 
+    background: url("http://www.brotec-icafal.cl/assets/images/bg-proyecto.jpg") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.panel-default {
+    opacity: 0.8;
+    margin-top:30px;
+}
+
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 30px;
+    background-color: #ffffff;
+}
+/* Login Form styles
+-------------------------------------------------- */
+.form-signin
+{
+    max-width: 330px;
+    padding: 15px;
+    margin: 0 auto;
+}
+.form-signin .form-signin-heading, .form-signin .checkbox
+{
+    margin-bottom: 10px;
+}
+.form-signin .checkbox
+{
+    font-weight: normal;
+}
+.form-signin .form-control
+{
+    position: relative;
+    font-size: 16px;
+    height: auto;
+    padding: 10px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.form-signin .form-control:focus
+{
+    z-index: 2;
+}
+.form-signin input[type="text"]
+{
+    margin-bottom: -1px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+.form-signin input[type="password"]
+{
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+.account-wall
+{
+    margin-top: 20px;
+    padding: 40px 0px 20px 0px;
+    background-color: #f7f7f7;
+    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    opacity: 0.8;
+}
+.login-title
+{
+    color: #555;
+    font-size: 18px;
+    font-weight: 400;
+    display: block;
+}
+.profile-img
+{
+    width: 96px;
+    height: 96px;
+    margin: 0 auto 10px;
+    display: block;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    opacity: 0.8;
+}
+.need-help
+{
+    margin-top: 10px;
+}
+.new-account
+{
+    display: block;
+    margin-top: 10px;
+}
