--- a/src/main/webapp/resources/css/jsfcrud.css
+++ b/src/main/webapp/resources/css/jsfcrud.css
@@ -643,6 +643,14 @@ img.right {
     border-style: hidden !important;
 }
 
+.filtersGridParaOtroEmail td {
+    border-style: hidden !important;
+}
+
+.filtersGridParaOtroEmail td:nth-child(1) {
+    width: 20px;
+}
+
 .ui-accordion-content {
     padding: 6px 1px !important;
 }
