--- a/src/main/webapp/resources/css/jsfcrud.css
+++ b/src/main/webapp/resources/css/jsfcrud.css
@@ -744,4 +744,21 @@ img.right {
     float: left;
 }
 
+.btn-danger.ui-button, .btn-danger {
+    color: #fff;
+    background-color: #d9534f;
+    border-color: #d43f3a;
+}
+
+.btn.ui-button, btn{
+     color: #fff;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
 
